@@ -1014,6 +1014,11 @@ public:
 
 };
 
+ /** \defgroup  fl_unicode  Unicode and UTF-8 functions
+	fl global Unicode and UTF-8 ahndling functions
+     @{ */
+ /** @} */
+
 #endif // !Fl_H
 
 //
